---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: transform halveIntString references collection testing/int-string, defined at test://example/int-string#/collections/testing~1int-string, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: transform reverseIntString references collection testing/int-string, defined at test://example/int-string#/collections/testing~1int-string, without importing it or being imported by it,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/0,
        error: materialization references collection testing/int-string, defined at test://example/int-string#/collections/testing~1int-string, without importing it or being imported by it,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1,
        error: materialization references collection testing/int-halve, defined at test://example/int-halve#/collections/testing~1int-halve, without importing it or being imported by it,
    },
]
